# gif-converter

./: .dockerignore  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  vcpkg.json
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: check.yaml  doxygen.yaml
docs/: api-design.md  cpp-coding-standards.md  git-workflow.md  security.md
src/: CMakeLists.txt  logger.cpp  logger.h  main.cpp
src/controllers/: conversions_controller.cpp  conversions_controller.h  health_controller.cpp  health_controller.h
src/ffmpeg/: ffmpeg_types.h
src/models/: conversion_job.h
src/plugins/: app_context.cpp  app_context.h
src/repositories/: conversion_repository.h  in_memory_conversion_repository.cpp  in_memory_conversion_repository.h
src/services/: gif_converter_service.cpp  gif_converter_service.h
tests/: CMakeLists.txt  conversions_controller_test.cpp  health_controller_test.cpp  in_memory_conversion_repository_test.cpp  main.cpp  test_server.h
